RESOLVED FIXED60900
Web Inspector: refactoring: ScriptDebugListener::didParseSource has too many parameters.
https://bugs.webkit.org/show_bug.cgi?id=60900
Summary Web Inspector: refactoring: ScriptDebugListener::didParseSource has too many ...
Pavel Podivilov
Reported 2011-05-16 10:02:36 PDT
Web Inspector: refactoring: ScriptDebugListener::didParseSource has too many parameters.
Attachments
Patch. (11.21 KB, patch)
2011-05-16 10:03 PDT, Pavel Podivilov
webkit.review.bot: commit-queue-
Fix style. (11.20 KB, patch)
2011-05-16 10:10 PDT, Pavel Podivilov
webkit.review.bot: commit-queue-
Fix warning. (11.23 KB, patch)
2011-05-16 11:23 PDT, Pavel Podivilov
yurys: review-
Patch. (11.13 KB, patch)
2011-05-17 10:21 PDT, Pavel Podivilov
yurys: review+
Pavel Podivilov
Comment 1 2011-05-16 10:03:14 PDT
WebKit Review Bot
Comment 2 2011-05-16 10:05:58 PDT
Attachment 93657 [details] did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebCore/ChangeLog', u'Source/WebCor..." exit_code: 1 Source/WebCore/inspector/ScriptDebugListener.h:68: The parameter name "script" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebCore/inspector/InspectorDebuggerAgent.h:123: The parameter name "script" adds no information, so it should be removed. [readability/parameter_name] [5] Total errors found: 2 in 6 files If any of these errors are false positives, please file a bug against check-webkit-style.
Pavel Podivilov
Comment 3 2011-05-16 10:10:22 PDT
Created attachment 93659 [details] Fix style.
WebKit Review Bot
Comment 4 2011-05-16 10:12:50 PDT
WebKit Review Bot
Comment 5 2011-05-16 10:22:28 PDT
Comment on attachment 93659 [details] Fix style. Attachment 93659 [details] did not pass mac-ews (mac): Output: http://queues.webkit.org/results/8699909
Pavel Podivilov
Comment 6 2011-05-16 11:23:18 PDT
Created attachment 93676 [details] Fix warning.
Yury Semikhatsky
Comment 7 2011-05-17 07:31:09 PDT
Comment on attachment 93676 [details] Fix warning. View in context: https://bugs.webkit.org/attachment.cgi?id=93676&action=review > Source/WebCore/inspector/ScriptDebugListener.h:50 > + , endColumn(0) linesCount(0) is missing > Source/WebCore/inspector/ScriptDebugListener.h:62 > + int linesCount; This field is never used, please remove it.
Pavel Podivilov
Comment 8 2011-05-17 10:21:31 PDT
Pavel Podivilov
Comment 9 2011-05-17 10:21:40 PDT
(In reply to comment #7) > (From update of attachment 93676 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=93676&action=review > > > Source/WebCore/inspector/ScriptDebugListener.h:50 > > + , endColumn(0) > > linesCount(0) is missing > > > Source/WebCore/inspector/ScriptDebugListener.h:62 > > + int linesCount; > > This field is never used, please remove it. Done.
Pavel Podivilov
Comment 10 2011-05-18 06:51:22 PDT
Note You need to log in before you can comment on or make changes to this bug.